Automerge official actions (match manager)
As per:
- https://docs.renovatebot.com/configuration-options/#matchmanagers
- https://docs.renovatebot.com/modules/manager/github-actions/

--- a/renovate.json
+++ b/renovate.json
@@ -12,7 +12,7 @@
   "packageRules": [
     {
       "description": ["Automerge updated patch versions of official actions"],
-      "matchDatasources": ["action"],
+      "matchManagers": ["github-actions"],
       "matchPackagePatterns": ["^actions/"],
       "matchUpdateTypes": ["patch"],
       "automergeStrategy": "squash",
